# novanet

./: .gitignore  CMakeLists.txt  README.md  todo.txt
src/: neuron.cpp  neuron.hpp
src/opusutil/: CMakeLists.txt  opusutil.cpp  opusutil.hpp
src/randutil/: CMakeLists.txt  randutil.cpp  randutil.hpp
